- Fixes collapsed workspace tab text (#1008)
- Fixes collapsed workspace tab text
- Fixes chat close button styling to match spec
- Adds drag thumbnail active state
- Fixes restore of subtab state after resource tabs collapsed and expanded
- Fixes failing Cypress tests

* PR fixes

--- a/src/components/navigation/collapsed-resources-tab.scss
+++ b/src/components/navigation/collapsed-resources-tab.scss
@@ -13,6 +13,10 @@
   border-width: 2px;
   border-style: solid;
   display: flex;
+  visibility: hidden;
+  &.shown {
+    visibility: visible;
+  }
   &.problems {
     border-color: $problem-orange;
     background-color: $problem-orange-light-4;
