--- a/src/components/navigation/nav-tab-panel.sass
+++ b/src/components/navigation/nav-tab-panel.sass
@@ -7,14 +7,15 @@
   width: 50%
   height: calc(100vh - (#{$header-height} + #{$workspace-content-margin} * 2))
   position: fixed
-  left: calc(0px - 100vw * .5)
+  left: 0px
   top: $header-height
   transition-duration: .5s
   margin-top: $workspace-content-margin
   background-color: white
   border-radius: 0 6px 0 0
+  visibility: hidden
   &.shown
-    left: 0px
+    visibility: visible
   &.half
     width: calc(50% - 4px)
   &.full
